Apply google-java-format